--- a/README
+++ b/README
@@ -178,10 +178,10 @@ using either --wsleep or --rsleep, rw_semaphore does avoid the starvation to
 some degree, which is good and kinda expected. You always see both hands to
 be satisfied, but of course, with different latency and frequency.
 From my experiments, rw_semaphore seems to achieve it using some kind of
-barrier. I guess so looking at the not-really fine grained interleaving
-between readers and writers. OTOH, this is the same done by the unlock
-part of the "preventive signal" protocol: waking up all the readers at
-once.
+barrier (simple counter?). I guess so looking at the not-really fine
+grained interleaving between readers and writers. OTOH, this is the same
+done by the unlock part of the "preventive signal" protocol: waking up
+all the readers at once.
 
 The "Preventive signal" protocol and the current (Linux 3.1) rw_semaphore
-behaviour with respect to starvation seems to be equivalent.
+behaviour with respect to starvation seem to be equivalent.
